# desktop-wallet

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: hello.yml  release.yml
docs/: hardware-signer.md
docs/phases/: README.md  phase-01-baseline.md  phase-02-staking.md
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipfs_cache.rs  keychain.rs  ledger.rs  lib.rs  main.rs  mcp_bridge.rs  name_registry.rs  studio_host.rs  vault.rs
src-tauri/src/auto_lock/: mod.rs  system_events.rs
src-tauri/src/passkey/: challenge.rs  commands.rs  credential.rs  mod.rs  registration.rs
src-tauri/src/slh_backup/: commands.rs  keys.rs  mod.rs  sign.rs
src-tauri/src/stele/: approval_bridge.rs  commands.rs  mcp_sidecar.rs  mod.rs  outbound_mcp.rs
src-tauri/src/vault_multi/: commands.rs  container.rs  export.rs  mek.rs  migration.rs  mod.rs  multisig.rs  multisig_commands.rs  proposal.rs  vek.rs
src/__tests__/helpers/: fixtures.test.ts  fixtures.ts  mockFetch.ts  setup.ts
src/components/: ActivityDetail.tsx  AddCustomToken.tsx  AddVaultModal.tsx  ApprovalOverlay.tsx  BackupReminderCard.tsx  BackupStatusIndicator.tsx  BalanceBreakdown.tsx  BridgeRiskPanel.tsx  ChangeThresholdModal.tsx  ClusterMobilityNotice.tsx  ClusterPicker.tsx  ContactsPickerModal.tsx  DelegationsDashboard.tsx  EmergencyBackupSection.tsx  EmergencyRecoveryFlow.tsx  Identity.tsx  IdentityCard.tsx  LockScreen.tsx  ManageSignersModal.tsx  MnemonicGrid.tsx  MultisigAboutCard.tsx  MultisigCreateFlow.tsx  NameLookup.tsx  NetworkPanel.tsx  NftCollectionPanel.tsx  NftDetail.tsx  NftGallery.tsx  NotificationDetail.tsx  Onboarding.tsx  OperatorActivitySparkline.tsx  OwnedNamesDashboard.tsx  PasswordStrengthMeter.tsx  PendingTransferBanner.tsx  PendingTxReconciler.tsx  ReceiveModal.tsx  RecipientInput.tsx  RewardCard.tsx  SecurityPanel.tsx  SendComposeModal.tsx  SendErc20Form.tsx  (+19 more)
src/components/__tests__/: AddCustomToken.test.tsx  BackupReminderCard.test.tsx  BackupStatusIndicator.test.tsx  BalanceBreakdown.test.tsx  ClusterMobilityNotice.test.tsx  ClusterPicker.test.tsx  DelegationsDashboard.test.tsx  EmergencyBackupSection.test.tsx  Identity.test.tsx  IdentityCard.test.tsx  LockScreen.test.tsx  MultisigAboutCard.test.tsx  MultisigCreateFlow.test.tsx  NameLookup.test.tsx  NftDetail.test.tsx  NftGallery.test.tsx  OperatorActivitySparkline.test.tsx  OwnedNamesDashboard.test.tsx  PendingTransferBanner.test.tsx  RecipientInput.test.tsx  RewardCard.test.tsx  SecurityPanel.passkey.test.tsx  SecurityPanel.policy.test.tsx  SendErc20Form.test.tsx  SendLythForm.test.tsx  SendNftForm.test.tsx  TokenSummaryCard.test.tsx  Topbar.badge.test.tsx  VaultCreateFlow.test.tsx  VaultPicker.test.tsx  VaultsPanel.test.tsx  a11y.test.tsx  format.test.ts
src/data/: fixtures.ts  types.ts
src/lib/: clipboard-with-clear.ts  import-error.ts  password-validation.ts
src/lib/__tests__/: password-validation.test.ts
src/operations/: OperationsDrawer.tsx  context.tsx  policy-gate.ts  types.ts
src/operations/__tests__/: OperationsDrawer.hint.test.tsx  OperationsDrawer.multisig.test.tsx  OperationsDrawer.policy.test.tsx  policy-gate.test.ts
src/pages/: Activity.tsx  Agents.tsx  AiTrading.tsx  Bridges.tsx  Contacts.tsx  Home.tsx  Inbox.tsx  MonoStudio.tsx  Names.tsx  News.tsx  Notifications.tsx  Operators.tsx  Proposals.tsx  Provider.tsx  RiscvContracts.tsx  Settings.tsx  Stake.tsx  Stele.tsx  TokenDetail.tsx  Tokens.tsx  Trade.tsx  Wallets.tsx
src/pages/__tests__/: Home.test.tsx  Operators.test.tsx  Proposals.test.tsx  Stake.delegate.test.tsx  Stake.redelegate.test.tsx  Stake.unstake.test.tsx  Tokens.test.tsx
src/sdk/: active-wallet.ts  activity-rows.ts  address.ts  addressbook.ts  agent-registry.ts  agent-subaccount.ts  agent-wallet.ts  approval-bridge.ts  auto-lock-setting.ts  auto-lock.ts  auto-lock.tsx  autovote-entropy.ts  autovote.ts  booking.ts  bridge.ts  client.ts  clob-trade.ts  clob-units.ts  contacts.ts  convert.ts  delegation.ts  erc1155.ts  erc20.ts  erc721.ts  feature-flags.ts  fee-preview.ts  finality.ts  flights.ts  http.ts  incoming-detect.ts  ipfs-disk-cache.ts  ipfs.ts  keychain.ts  ledger.ts  live-registry.ts  live.ts  log-cursor.ts  market.ts  monoscan.ts  mrv-form.ts  (+62 more)
src/sdk/__tests__/: activity-merge.test.ts  activity-rows.test.ts  address.test.ts  auto-lock-setting.test.ts  auto-lock.test.ts  autovote-entropy.test.ts  autovote.test.ts  bridge.test.ts  chainSnapshot.test.ts  client.test.ts  clob-units.test.ts  contacts.test.ts  convert-format.test.ts  delegation.test.ts  erc1155.test.ts  erc20.test.ts  erc721.test.ts  feature-flags.test.ts  fee-preview.test.ts  identity.test.ts  incoming-detect.test.ts  ipfs-disk-cache.test.ts  ipfs.test.ts  log-cursor.test.ts  market.test.ts  monoscan.test.ts  mrv-form.test.ts  mrv.test.ts  multisig-intent.test.ts  multisig.test.ts  naming-pricing.test.ts  naming.test.ts  native-denom.test.ts  native-receipt-proof.test.ts  native-send.test.ts  nft-projection.test.ts  notification-cluster-fields.test.ts  notification-controls.test.ts  notifications-record.test.ts  notifications-store.test.ts  (+31 more)
src/styles/: themes.css  tokens.css  wallet.css
