[package]
name = "desktop-wallet"
version = "0.0.1"
edition = "2021"
rust-version = "1.77"
description = "Monolythium desktop wallet (Tauri 2)"
license = "Apache-2.0"
publish = false

[lib]
name = "desktop_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "desktop-wallet"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "macros", "rt"] }

# Vault crypto. Argon2id KDF + AES-256-GCM encryption of the wallet seed.
# Stable releases of the RustCrypto password-hashes / AEADs lines.
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
zeroize = { version = "1", features = ["derive"] }

# UUID-shaped vault ids for the multi-vault container (Phase 5).
# v4 random ids; `rng-getrandom` reuses the same OsRng path as
# `rand`'s `OsRng`, so no extra entropy source is added.
uuid = { version = "1", default-features = false, features = ["v4", "rng-getrandom", "serde"] }

# Phase 6 — Keccak-256 for multisig address derivation + proposal
# canonical hashing. RustCrypto `sha3` crate; same family the wallet's
# existing crates use (alloc-only, no system deps).
sha3 = { version = "0.10", default-features = false }

# Ledger hardware signer (Stage 4). HID-only — WebUSB is out of scope.
# `ledger-transport-hid` brings in `hidapi` which links against the system
# HIDAPI / IOHIDManager (macOS) / hidraw (Linux) / hid.dll (Windows).
ledger-transport-hid = "0.11"
ledger-apdu = "0.11"

# OS keychain. Per-platform native backends:
# - macOS:    apple-native (Security framework)
# - Windows:  windows-native (Credential Manager)
# - Linux:    sync-secret-service (libsecret) — works for GNOME Keyring + KWallet.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[features]
# Default to no custom features. Production builds opt in via `--features custom-protocol`.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
