[package]
name = "desktop-wallet"
version = "0.0.7"
edition = "2021"
rust-version = "1.77"
description = "Monolythium desktop wallet (Tauri 2)"
license = "Apache-2.0"
publish = false

[lib]
name = "desktop_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "desktop-wallet"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# Per-app key-value JSON store, used for the multi-vault catalog
# (sdk/vaultCatalog.ts). The plugin is mobile-and-desktop; on desktop it
# writes to the OS-standard app-data dir.
tauri-plugin-store = "2"
# Self-update: pulls the signed latest.json manifest from the project's
# GitHub Releases, verifies the platform asset signature against the
# `plugins.updater.pubkey` in tauri.conf.json, and downloads + applies
# the update on user confirmation. The matching frontend module is
# `src/sdk/updater.ts`. tauri-plugin-process is paired so the frontend
# can `relaunch()` after `downloadAndInstall()`.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Native OS toast notifications. Paired with the in-app notifications center:
# a newly-recorded terminal tx notification (confirmed/failed) also raises an
# OS toast via `src/sdk/os-toast.ts`. The toast is gated at the frontend by the
# `wallet.experimentalEnabled` flag (same gate as the in-app center), so flag
# off ⇒ no toast and no permission prompt.
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
sha2 = "0.10"
ed25519-dalek = "2"

# --- Stele marketplace (settings-gated feature; opt in via `--features stele`) ---
# The Stele tab in the UI is gated by a TypeScript localStorage flag; this
# Cargo feature controls whether the Stele backend (MCP sidecar, approval
# bridge, outbound MCP server, marketplace commands) is compiled into the
# binary. Default builds today do not bundle Stele while the merge is in
# flight; ship-time builds set --features stele.
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query"], optional = true }
futures-util = { version = "0.3", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
bip39 = { version = "2", default-features = false, features = ["std", "zeroize"], optional = true }
sha3 = { version = "0.10", optional = true }
bech32 = { version = "0.11", default-features = false, features = ["alloc"], optional = true }
fips204 = { version = "0.4.6", default-features = false, features = ["ml-dsa-65"], optional = true }

# Vault crypto. Argon2id KDF + AES-256-GCM encryption of the wallet seed.
# Stable releases of the RustCrypto password-hashes / AEADs lines.
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
zeroize = { version = "1", features = ["derive"] }

# Ledger hardware signer (Stage 4). HID-only — WebUSB is out of scope.
# `ledger-transport-hid` brings in `hidapi` which links against the system
# HIDAPI / IOHIDManager (macOS) / hidraw (Linux) / hid.dll (Windows).
ledger-transport-hid = "0.11"
ledger-apdu = "0.11"

# OS keychain. Per-platform native backends:
# - macOS:    apple-native (Security framework)
# - Windows:  windows-native (Credential Manager)
# - Linux:    sync-secret-service (libsecret) — works for GNOME Keyring + KWallet.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

# For O_NOFOLLOW + getuid() in the lyth_mcp shared-store read path
# (`mcp_bridge.rs`). Unix-only; the Windows path falls back to plain
# `OpenOptions`.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# Default to no custom features. Production builds opt in via `--features custom-protocol`.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Stele marketplace backend. Default off until the screens port is far
# enough along to enable in shipped binaries. Independent of the
# `wallet.steleEnabled` localStorage flag — that flag controls UI
# visibility, this feature controls backend compilation.
stele = [
    "dep:axum",
    "dep:bech32",
    "dep:bip39",
    "dep:fips204",
    "dep:futures-util",
    "dep:sha3",
    "dep:uuid",
    "tokio/io-util",
    "tokio/process",
    "tokio/rt-multi-thread",
]
